--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <p style="text-align: center;margin-top: 40px;padding:10px"><a href="#">view on github</a></p>
+      <p style="text-align: center;margin-top: 40px;padding:10px"><a href="https://github.com/getamna/share/">view on github</a></p>
     </div>
   </div>
 
