--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <title>Group of Tabs</title>
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet/less" type="text/css" href="../css/styles.less" />
-  <link rel="stylesheet" type="text/css" href="../css/container.min.css" />
+  <link rel="stylesheet/less" type="text/css" href="./css/styles.less" />
+  <link rel="stylesheet" type="text/css" href="./css/container.min.css" />
   <link rel="stylesheet/less" type="text/css" href="./tabs.less" />
-  <script src="../js/less.min.js"></script>
+  <script src="./js/less.min.js"></script>
   <script type="text/javascript">
     (window.heap = window.heap || []),
       (heap.load = function (e, t) {
