--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   #f3ecec;">
   <div class="main-header">
     <span class="logo" draggable="true" style="cursor: pointer" onclick="window.open('../','_self')"">
-        <img src=" ../favicon.png" height="36" width="30" draggable="false" />
+        <img src=" ./favicon.png" height="36" width="30" draggable="false" />
     </span>
 
   </div>
