--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-  <title>Group of Tabs</title>
+  <title>Amna Tab Group</title>
+  <link rel="icon" href="./favicon.png"/>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet/less" type="text/css" href="./css/styles.less" />
   <link rel="stylesheet" type="text/css" href="./css/container.min.css" />
