--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       /* Get the text field */
       var copyText = document.createElement("input")
       document.body.appendChild(copyText);
-      copyText.value = "https://getamna.com/share?code="+code;
+      copyText.value = "https://share.getamna.com/?code="+code;
 
       /* Select the text field */
       copyText.select();
